--- a/template/layout/default.html.twig
+++ b/template/layout/default.html.twig
@@ -13,6 +13,7 @@
     <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="{{  path('tasks') }}">Tasks</a>
         <a class="p-2 text-dark" href="{{  path('admin') }}">Admin</a>
+        <a class="p-2 text-dark" href="{{  path('logout') }}">Logout</a>
     </nav>
 </div>
 
